My first commit in a long time. HNY!

--- a/Poshem Business School Sales.ipynb
+++ b/Poshem Business School Sales.ipynb
@@ -2008,7 +2008,7 @@
     "\n",
     "* Order distribution across regions shows that the West region records the highest number of orders with 3140 orders and South with the lowest, suggesting weaker demand or lower market penetration.\n",
     "\n",
-    "* The dataset contains three unique product categories. Based on total sales value, Technology generates the highest sales with \\$827,455.8730 and Office Supplies, the lowest with \\$705,422.3340\n",
+    "* The dataset contains three unique product categories. Based on total sales value, Technology generates the highest sales with `$827,455.8730` and Office Supplies, the lowest with `$705,422.3340`\n",
     "\n",
     "* The Top 5 selling products are Staple envelope, Staples, Easy-staple paper, Avery Non-Stick Binders and Staple remover          \n",
     "\n",
@@ -2020,7 +2020,7 @@
     "\n",
     "* Analysis of the Order counts by shipping modes shows that customers prefer Standard Class shipping option and barely use the Same Day option, likely due to higher cost.\n",
     "\n",
-    "* The overall distribution of sales is right-skewed with a mean of approximately \\$230.77 which is substantially greater than the median of \\$54.49.\n",
+    "* The overall distribution of sales is right-skewed with a mean of approximately `$230.77` which is substantially greater than the median of `$54.49`.\n",
     "\n",
     "* There is presence of extreme high-value and low-value outliers. 1145 outliers were identified in the dataset.\n",
     "\n",
