Update Poshem Business School Sales.ipynb

--- a/Poshem Business School Sales.ipynb
+++ b/Poshem Business School Sales.ipynb
@@ -1186,8 +1186,8 @@
     "print(f'This can also be visualised in the graph below')\n",
     "plt.figure(figsize = (6, 5))\n",
     "sns.barplot(x = top_5_prods.index, y = top_5_prods.values, hue = top_5_prods.index, legend = True, palette = 'magma')\n",
-    "plt.title('Top 5 Cities with the highest number of orders', fontsize = 14)\n",
-    "plt.xlabel('City', fontsize = 12)\n",
+    "plt.title('Top 5 selling products', fontsize = 14)\n",
+    "plt.xlabel('Product Name', fontsize = 12)\n",
     "plt.ylabel('Number of Orders', fontsize = 12)\n",
     "plt.xticks(rotation = 45)\n",
     "plt.legend(fontsize = 9)\n",
